# sdl-gpu

./: .gitignore  CMakeLists.txt
debian/: changelog  control  copyright  libsdl2-gpu-demos.examples  libsdl2-gpu-demos.install  rules
debian/install-files/demos/: CMakeLists.txt
debian/install-files/tests/: CMakeLists.txt
debian/patches/: SDL_detection.patch  SONAME.patch  check_if_active_target_is_null.patch  cmake_version.patch  fix-examples.patch  fix-indent-warnings.patch  fix_rendering.patch  glew.patch  multiarch.patch  series  tcc_compilation.patch
debian/pkgconfig/: SDL2_gpu.pc
demos/: CMakeLists.txt
demos/3d/: main.c
demos/fontcache/: main.c
include/: SDL_gpu.h
src/: CMakeLists.txt  renderer_GL_common.inl  renderer_OpenGL_1.c  renderer_OpenGL_4.c
tests/renderer/: main.c
